--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -73,7 +73,7 @@
                     {% endif %}
                 </div>
                 <div class="user-info">
-                    <h4>{{ user.first_name }} {{ user.last_name }}</h4>
+                    <h4>{{ user.user.first_name }} {{ user.user.last_name }}</h4>
                     <p>Grade Level: {{ user.grade_level }}</p>
                     <p>{{ user.concentration }}</p>
                 </div>
