--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -27,7 +27,7 @@
             <!-- Logo and Title -->
             <a class="navbar-brand navbar-title" href="{% url 'home' %}">
                 <img src="/static/projects/images/logo.png" alt="DevLink Logo" class="navbar-logo" color="#ffff">
-                DevLink
+                DevLink |
             </a>
     
             <!-- Navbar Toggler Button (for mobile)
@@ -40,6 +40,9 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
             <ul class="navbar-nav nav-links align-items-">
                 {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home' %}">Projects</a>
+                </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'network' %}">Network</a>
                     </li>
